--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "gulp-declare": "^0.3.0",
     "gulp-eval": "^1.0.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-packer": "^0.1.1",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "*",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
+    "gulp-uglify-inline": "^0.1.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.11",
     "merge2": "^1.0.3"
