--- a/config.js.sample
+++ b/config.js.sample
@@ -32,21 +32,19 @@ module.exports = {
 		bPath+'github/bootstrap/dist/js/bootstrap.js',
 		bPath+'custom/bootstrap-post.js',
 		],
-	dest: {
-		path: "/var/www/html/master/templates/admin/bootstrap",
-		css: "bootstrap.min.css",
-		js: "bootstrap.min.js",
-	},
-	jscompress : 1, // 1=uglify, 2=packer, 3=inline
 	copy: {
 		'/css': [
-			bPath+'github/bootstrap/dist/css/bootstrap-theme.min.css',
-			bPath+'github/Font-Awesome/css/font-awesome.min.css',
 			bPath+'css/alert.css',
 			bPath+'css/datepicker.css',
 			bPath+'css/datetimepicker.css',
 			{
-				'colorpicker.css': bPath+'github/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css'
+				'bootstrap-theme.min.css': bPath+'github/bootstrap/dist/css/bootstrap-theme.css'
+			},
+			{
+				'font-awesome.min.css': bPath+'github/Font-Awesome/css/font-awesome.css'
+			},
+			{
+				'colorpicker.css': bPath+'github/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css'
 			}
 		],
 		'/js': [
@@ -55,7 +53,7 @@ module.exports = {
 			bPath+'js/datetimepicker.js',
 			bPath+'js/rating.js',
 			{
-				'colorpicker.js': bPath+'github/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js'
+				'colorpicker.js': bPath+'github/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js'
 			}
 		],
 		'/img': [
@@ -63,4 +61,10 @@ module.exports = {
 			bPath+'github/bootstrap-colorpicker/dist/img/**'
 		]
 	},
+	dest: {
+		path: "/private/var/www/html/master/templates/admin/bootstrap",
+		css: "bootstrap.min.css",
+		js: "bootstrap.min.js",
+	},
+	jscompress : 2 // 1=uglify, 2=packer
 }
