--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Danang Widiantoro",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
@@ -30,6 +31,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.11",
-    "merge2": "^1.0.3"
+    "jsdom": "^9.12.0",
+    "merge2": "^1.0.3",
+    "pump": "^1.0.2"
   }
 }
