--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esoftplay-pack",
-  "version": "0.0.5",
+  "version": "0.0.5a",
   "description": "CLI command to compress javascript, css, scss at once. Support auto recompress on any changes",
   "main": "index.js",
   "scripts": {},
