--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esoftplay-packer",
-  "version": "0.0.1b",
+  "version": "0.0.1c",
   "description": "CLI command to compress javascript, css, scss at once. Support auto recompress on any changes",
   "main": "index.js",
   "scripts": {},
